# little-64

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CPU_ARCH.md  GUI_DEBUGGER.md  LICENCE.md  MAKE_ARGS=-j24  README.md  imgui.ini  instruction_format.ods  interrupt_example.asm  meson.build  meson_options.txt  requirements-docs.txt  requirements-hdl.txt  serial_boot.asm  test.asm  test_jump.asm  test_jump_2.asm  test_long.asm  test_program.asm  test_quad.asm  test_range.asm
assembler/: assembler.cpp  assembler.hpp  encoder.cpp  encoder.hpp  lexer.cpp  lexer.hpp  main.cpp  meson.build
gui/: app.cpp  app.hpp  meson.build
gui/panels/: assembler_panel.cpp  assembler_panel.hpp  control_panel.cpp  control_panel.hpp  disassembly_panel.cpp  disassembly_panel.hpp  memmap_panel.cpp  memmap_panel.hpp  memory_panel.cpp  memory_panel.hpp  panel_contexts.hpp  register_panel.cpp  register_panel.hpp  serial_output_panel.cpp  serial_output_panel.hpp
hdl/: meson.build  pytest.ini
hdl/little64/: __init__.py  alu.py  config.py  core.py  decode.py  isa.py  litex.py  litex_arty.py  litex_cpu.py  litex_linux_boot.py  litex_soc.py  mmu.py  special_registers.py  tlb.py  variants.py
hdl/little64/basic/: core.py  special_registers.py  tlb.py
hdl/little64/gemini/: __init__.py  core.py
hdl/little64/v2/: cache.py  core.py  decode.py  frontend.py  lsu.py  special_registers.py
hdl/little64/v3/: __init__.py  bundles.py  core.py  decode_stage.py  execute_stage.py  helpers.py  retire_stage.py  state.py  tlb.py
hdl/little64_cores/: __init__.py  boot-helper.S  config.py  crt0.S  decode.py  irq.h  litex.py  litex_arty.py  litex_cpu.py  litex_linux_boot.py  litex_sdcard.py  litex_soc.py  system.h  variants.py  wishbone.py
hdl/little64_cores/basic/: __init__.py  core.py  helpers.py  tlb.py
hdl/little64_cores/litex_software/bios/: Makefile  boot.c  linker.ld
hdl/little64_cores/litex_software/libbase/: Makefile
hdl/little64_cores/litex_software/libc/: Makefile
hdl/little64_cores/v2/: __init__.py  core.py  decode.py  frontend.py  helpers.py  tlb.py
hdl/little64_cores/v3/: __init__.py  bundles.py  cache.py  core.py  frontend.py  lsu.py  memory_stage.py  special_registers.py  tlb.py
hdl/little64_cores/v4/: __init__.py  bundles.py  core.py  decode_stage.py  frontend.py  lsu.py  predictor.py
hdl/tests/: conftest.py  core_test_contract.py  mmio_trace.py  perf_bench.py  shared_isa.py  shared_program.py  test_atomics.py  test_commit_profiles.py  test_config.py  test_core_smoke.py  test_generate_litex_linux_dts.py  test_litex_integration.py  test_litex_smoke_wrapper.py  test_shared_isa.py  test_shared_mmio.py  test_shared_programs.py  test_special_registers.py  test_tlb.py  test_traps.py  test_unaligned.py  test_v2_bus_watchdog.py  test_v2_cache.py  test_v2_core.py  test_v2_mmio.py  test_v2_shared_isa.py  test_v2_shared_programs.py  test_v2_traps.py  test_v2_unaligned.py  test_v3_cache.py  test_v3_core.py  test_v3_traps.py
hdl/tools/: arty_ila.py  build_litex_arty_bitstream.py  build_litex_flash_image.py  export_core_verilog.py  export_linux_boot_verilog.py  export_litex_cpu_verilog.py  generate_litex_linux_dts.py  generate_litex_llvm_wrappers.py  patch_litex_arty_bootrom.py  run_litex_linux_boot_smoke.py  run_verilator_linux_boot_smoke.py  verilator_linux_boot_smoke_main.cpp
hdl/tools/litex_sim_modules/: breadcrumbconsole.c  resetpulse.c  sdcardimage.c  simtraceon.c  spisdcard.c
host/disassembler/: disassembler.cpp  disassembler.hpp  meson.build
host/emulator/: address_translator.cpp  address_translator.hpp  cpu.cpp  cpu.hpp  debug_main.cpp  debug_server.cpp  debug_server.hpp  debug_transport.cpp  debug_transport.hpp  device.hpp  disk_image.cpp  disk_image.hpp  dtb_loader.cpp  dtb_loader.hpp  emulator_clock.cpp  emulator_clock.hpp  emulator_session.cpp  emulator_session.hpp  frontend_api.hpp  headless_runtime.cpp  headless_runtime.hpp  interrupt_vectors.hpp  lite_dram_dfii_stub_device.cpp  lite_dram_dfii_stub_device.hpp  lite_sdcard_device.cpp  lite_sdcard_device.hpp  lite_uart_device.cpp  lite_uart_device.hpp  little64.dts  machine_config.cpp  machine_config.hpp  main.cpp  memory_bus.cpp  memory_bus.hpp  memory_region.cpp  memory_region.hpp  meson.build  page_table_builder.cpp  page_table_builder.hpp  pv_block_device.cpp  (+11 more)
host/linker/: linker.cpp  meson.build
host/qt/: main_window.cpp  main_window.hpp  meson.build
project/: boot_frame_builder.cpp  compiler.hpp  llvm_assembler.cpp  meson.build  project.cpp  runner_main.cpp
tests/: meson.build  test_assembler.cpp  test_boot_frame.cpp  test_cpu_gp.cpp  test_cpu_integration.cpp  test_cpu_jumps.cpp  test_cpu_ldi.cpp  test_cpu_memory.cpp  test_cpu_special.cpp  test_devices.cpp  test_harness.hpp  test_linker.cpp  test_memory_bus.cpp
tests/boot/: test_bios_boot.py
tests/debug/: test_lldb_remote_smoke.py  test_rsp_server.py
tests/host/: test_clang_runtime_stress.cpp  test_devices.cpp  test_disassembler.cpp  test_linker.cpp  test_linux_port_build_helper.py  test_little64_cli.py  test_memory_bus.cpp  test_no_shell_wrappers.py  test_paging.cpp  test_sd_build_helper.py  test_sd_update_helper.py  test_tlb.cpp  test_tooling_refactor.py
tests/host/boot/: linux_userspace_write_init.S  linux_userspace_write_init.ld  test_bios_boot.py  test_direct_boot_paging.py  test_direct_boot_stage0_state.py  test_linux_userspace_write.py  test_litex_flash_boot.py
tests/host/debug/: test_bios_frame_sections.py  test_lldb_arch_smoke.py  test_lldb_remote_smoke.py  test_lldb_step_over_once.py  test_rsp_server.py
tests/llvm/scripts/: run_tests.py
tests/projects/hello/: hello.l64proj  main.asm  utils.asm
tests/shared/: generate_instruction_cases.py  gp_alu_cases.def  jump_program_cases.def  ldi_cases.def  memory_program_cases.def
tests/support/: cpu_test_helpers.hpp  test_harness.hpp
tools/little64/: pyproject.toml
tools/little64/little64/: __init__.py  __main__.py  build_support.py  cli.py  config.py  env.py  errors.py  hdl_bridge.py  litex_boot_support.py  paths.py  proc.py  rsp.py  sd.py  tooling_support.py  tools.py  vivado_support.py
(+175 files in other folders)
